2006-09-05 Tim
 PATCH: [ 1552153 ] Manual: Build with ads (XSL)
  Manual/build: build.bat build_html.bat new file: build_html_withads.xsl
  Manual/css: all.css print.css

2006-09-05 Kimmo
 PATCH: [ 1552127 ] Manual: Add info about shellextension and subfolders
  Manual: Open_paths.xml
 PATCH: [ 1552180 ] Manual: folder compare update
  Manual: Compare_dirs.xml
  Manual/screenshots new files: aborted.png foldercmp_progress.png
  Manual/screenhots removed files: Dircomp_status1.gif Dircomp_status2.gif
  Manual/build: build_html.bat build_htmlhelp.bat

2006-08-31 Kimmo
 PATCH: [ 1548888 ] Manual: Partial update for Quick start
  Manual: Quick_start.xml
  Manual/screenshots: OpenDlg1.gif
 PATCH: [ 1548909 ] Manual: What's new in 2.5 additions
  Manual: Whatsnew_2_1.xml
 PATCH: [ 1548922 ] Manual: Updates to installing
  Manual: Install.xml

2006-07-20 Kimmo
 PATCH: [ 1525572 ] [Manual] Update project file documentation
  Manual: Open_paths.xml
 Bump revision to 1.2.6
  Manual: WinMerge_help.xml

2006-07-16 Tim
 PATCH: [ 1523184 ] Manual: Chunk first sections in html (XSL)
  Manual: Manual.xsl
  Manual/build: build_html.xsl
 PATCH: [ 1523188 ] Manual: Use 'simpara' instead 'para' for language name list
  Manual: Locales.xml

2006-07-03 Kimmo
 Bump revision to 1.2.5
  Manual: WinMerge_help.xml

2006-07-02 Tim
 PATCH: [ 1515455 ] Manual: Suppress navigation in htmlhelp
  Manual/build: build_htmlhelp.xsl
 PATCH: [ 1515510 ] Manual: Use 'listitem' in About_Doc.xml
  Manual: About_Doc.xml
 PATCH: [ 1515529 ] Manual: Use 'Verdana' font in htmlhelp
  Manual/css: help.css
 PATCH: [ 1515940 ] Manual: Use 'Verdana' font in html too (XSL)
  Manual/css: all.css print.css

2006-05-22 Tim
 PATCH: [ 1493170 ] Manual: Delete 'art' output dir after htmlhelp compile
  Manual/build: build_htmlhelp.bat
 PATCH: [ 1493171 ] Manual: Use index in htmlhelp
  Manual/build: build_htmlhelp.xsl

2006-05-20 Tim
 BUG: [ 1489121 ] index.hhk file left behind when creating HTMLHelp manual